--- a/pomodoro/style.css
+++ b/pomodoro/style.css
@@ -3,7 +3,7 @@
 /* General */
 
 body {
-  font-family: 'Segoe UI', monospace;
+  font-family: 'Helvetica', monospace;
  // background-color: #c2e6e8;
 }
 
