--- a/pomodoro/style.css
+++ b/pomodoro/style.css
@@ -15,28 +15,28 @@ body {
 
 button,
 button:active {
-  background-color: rgb(234,178,156);
+  background-color: rgb(104, 189, 158);
   border: none;
   width: 42px;
   height: 40px;
   border-radius: 100%;
   text-align: center;
-  box-shadow: 0.2em 0.2em rgb(194, 91, 44);
-  -webkit-box-shadow: 0.2em 0.2em rgb(194, 91, 44);
-  -moz-box-shadow: 0.2em 0.2em rgb(194, 91, 44);
+  box-shadow: 0.2em 0.2em rgb(66, 138, 97);
+  -webkit-box-shadow: 0.2em 0.2em rgb(66, 138, 97);
+  -moz-box-shadow: 0.2em 0.2em rgb(66, 138, 97);
 }
 
 button:focus {
   translate: 0.2em 0.2em;
-  box-shadow: 0.2em 0.2em rgb(194, 91, 44) inset;
-  -webkit-box-shadow: 0.2em 0.2em rgb(194, 91, 44) inset;
-  -moz-box-shadow: 0.2em 0.2em rgb(194, 91, 44) inset;
+  box-shadow: 0.2em 0.2em rgb(66, 138, 97) inset;
+  -webkit-box-shadow: 0.2em 0.2em rgb(66, 138, 97) inset;
+  -moz-box-shadow: 0.2em 0.2em rgb(66, 138, 97) inset;
 }
 
 /* Clock Body */
 
 .clock-container {
-  background-color: rgb(240, 240, 190); 
+  background-color: rgb(255, 255, 255); 
   width: 350px;
   border-radius: 20px;
   padding: 30px;
@@ -48,7 +48,7 @@ button:focus {
 #time-left {
   font-size: 70px;
   text-align: center;
-  background-color: rgb(150,180,175);
+  background-color: rgb(198, 204, 203);
   padding: 20px;
   border-radius: 20px;
   box-shadow: 3px 3px rgb(121, 145, 141) inset;
@@ -66,11 +66,11 @@ button:focus {
   font-size: 25px;
   text-align: center;
   padding-top: 2px;
-  background-color: rgb(150,180,175);
+  background-color: rgb(198, 204, 203);
   border-radius: 10px;
   height: 40px;
   flex: 2;
-  box-shadow: 3px 3px rgb(121, 145, 141) inset;
+  box-shadow: 3px 3px rgb(198, 204, 203) inset;
 }
 
 #timer-ssr {
@@ -102,7 +102,7 @@ button:focus {
 .session-container {
   text-align: center;
 /*   display: inline-block; */
-  border: 2px solid rgb(234,178,156);
+  border: 2px solid rgb(104, 189, 158);
   padding: 10px;
   border-radius: 10px;
   width: 48%;
