--- a/pomodoro/style.css
+++ b/pomodoro/style.css
@@ -3,7 +3,7 @@
 /* General */
 
 body {
-  font-family: 'Helvetica', monospace;
+  font-family: 'Nunito', monospace;
  // background-color: #c2e6e8;
 }
 
@@ -17,8 +17,8 @@ button,
 button:active {
   background-color: rgb(104, 189, 158);
   border: none;
-  width: 42px;
-  height: 40px;
+  width: 32px;
+  height: 30px;
   border-radius: 100%;
   text-align: center;
   box-shadow: 0.2em 0.2em rgb(66, 138, 97);
@@ -37,25 +37,25 @@ button:focus {
 
 .clock-container {
   background-color: rgb(179, 227, 219); 
-  width: 350px;
-  border-radius: 20px;
-  padding: 30px;
-  box-shadow: 10px 10px rgb(121, 145, 141) inset;
+  width: 340px;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 5px 5px rgb(121, 145, 141) inset;
 }
 
 /* Display + Stop/Start/Reset Controls */
 
 #time-left {
-  font-size: 70px;
+  font-size: 80px;
   text-align: center;
   background-color: rgb(198, 204, 203);
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 3px 3px rgb(121, 145, 141) inset;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 1px 1px rgb(121, 145, 141) inset;
 }
 
 #display-controls {
-  margin: 10px 0;
+  margin: 5px 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -63,19 +63,19 @@ button:focus {
 }
 
 #timer-label {
-  font-size: 25px;
+  font-size: 15px;
   text-align: center;
-  padding-top: 2px;
+  padding-top: 1px;
   background-color: rgb(198, 204, 203);
-  border-radius: 10px;
-  height: 40px;
+  border-radius: 5px;
+  height: 30px;
   flex: 2;
-  box-shadow: 3px 3px rgb(198, 204, 203) inset;
+  box-shadow: 1px 1px rgb(198, 204, 203) inset;
 }
 
 #timer-ssr {
   flex: 1;
-  margin-left: 30px;
+  margin-left: 20px;
   display: flex;
   justify-content: space-between;
   flex-start: end;
@@ -84,7 +84,7 @@ button:focus {
 /* Timer Length Controls */
 
 .length-container {
-  margin-top: 20px;
+  margin-top: 10px;
   display: flex;
   flex-direction: row;
 }
@@ -94,18 +94,18 @@ button:focus {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 140px;
-  height:60px;
+  width: 130px;
+  height:50px;
 }
 
 .break-container, 
 .session-container {
   text-align: center;
 /*   display: inline-block; */
-  border: 2px solid rgb(104, 189, 158);
-  padding: 10px;
+  border: 1px solid rgb(104, 189, 158);
+  padding: 5px;
   border-radius: 10px;
-  width: 48%;
+  width: 38%;
 }
 
 .timer-length {
@@ -114,5 +114,5 @@ button:focus {
 
 .break-container,
 .inc-arrow {
-  margin-right: 12px;
+  margin-right: 7px;
 }
