--- a/pomodoro/style.css
+++ b/pomodoro/style.css
@@ -3,7 +3,7 @@
 /* General */
 
 body {
-  font-family: 'Nunito', monospace;
+  font-family: 'Montserrat';
  // background-color: #c2e6e8;
 }
 
@@ -37,9 +37,9 @@ button:focus {
 
 .clock-container {
   background-color: rgb(179, 227, 219); 
-  width: 200px;
+  width: 120px;
   border-radius: 5px;
-  padding: 3px;
+  padding: 5px;
   box-shadow: 2px 2px rgb(121, 145, 141) inset;
 }
 
@@ -49,13 +49,13 @@ button:focus {
   font-size: 30px;
   text-align: center;
   background-color: rgb(198, 204, 203);
-  padding: 3px;
+  padding: 5px;
   border-radius: 5px;
   box-shadow: 1px 1px rgb(121, 145, 141) inset;
 }
 
 #display-controls {
-  margin: 5px 0;
+  margin: 10px 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -68,7 +68,7 @@ button:focus {
   padding-top: 1px;
   background-color: rgb(198, 204, 203);
   border-radius: 3px;
-  height: 15px;
+  height: 10px;
   flex: 2;
   box-shadow: 1px 1px rgb(198, 204, 203) inset;
 }
@@ -94,8 +94,8 @@ button:focus {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 100px;
-  height:35px;
+  width: 50px;
+  height:25px;
 }
 
 .break-container, 
@@ -105,7 +105,7 @@ button:focus {
   border: 1px solid rgb(104, 189, 158);
   padding: 5px;
   border-radius: 5px;
-  width: 38%;
+  width: 30%;
 }
 
 .timer-length {
