--- a/pomodoro/style.css
+++ b/pomodoro/style.css
@@ -3,7 +3,7 @@
 /* General */
 
 body {
-  font-family: 'Montserrat';
+  font-family: 'Tahoma';
  // background-color: #c2e6e8;
 }
 
@@ -17,9 +17,9 @@ button,
 button:active {
   background-color: rgb(104, 189, 158);
   border: none;
-  width: 17px;
+  width: 20px;
   height: 15px;
-  border-radius: 100%;
+  border-radius: 90%;
   text-align: center;
   box-shadow: 0.2em 0.2em rgb(66, 138, 97);
   -webkit-box-shadow: 0.2em 0.2em rgb(66, 138, 97);
@@ -94,8 +94,8 @@ button:focus {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 50px;
-  height:25px;
+  width: 30px;
+  height:30px;
 }
 
 .break-container, 
@@ -105,14 +105,14 @@ button:focus {
   border: 1px solid rgb(104, 189, 158);
   padding: 5px;
   border-radius: 5px;
-  width: 30%;
+  width: 15%;
 }
 
 .timer-length {
-  font-size: 2em;
+  font-size: 1em;
 }
 
 .break-container,
 .inc-arrow {
-  margin-right: 5px;
+  margin-right: 10px;
 }
