--- a/pomodoro/style.css
+++ b/pomodoro/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tahoma:wght@600&display=swap');
 
 /* General */
 
@@ -17,8 +17,8 @@ button,
 button:active {
   background-color: rgb(104, 189, 158);
   border: none;
-  width: 20px;
-  height: 15px;
+  width: 42px;
+  height: 40px;
   border-radius: 100%;
   text-align: center;
   box-shadow: 0.2em 0.2em rgb(66, 138, 97);
@@ -37,21 +37,21 @@ button:focus {
 
 .clock-container {
   background-color: rgb(179, 227, 219); 
-  width: 120px;
-  border-radius: 5px;
-  padding: 5px;
-  box-shadow: 2px 2px rgb(121, 145, 141) inset;
+  width: 350px;
+  border-radius: 20px;
+  padding: 30px;
+  box-shadow: 10px 10px rgb(121, 145, 141) inset;
 }
 
 /* Display + Stop/Start/Reset Controls */
 
 #time-left {
-  font-size: 30px;
+  font-size: 70px;
   text-align: center;
   background-color: rgb(198, 204, 203);
-  padding: 5px;
-  border-radius: 5px;
-  box-shadow: 1px 1px rgb(121, 145, 141) inset;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 3px 3px rgb(121, 145, 141) inset;
 }
 
 #display-controls {
@@ -63,19 +63,19 @@ button:focus {
 }
 
 #timer-label {
-  font-size: 5px;
+  font-size: 25px;
   text-align: center;
-  padding-top: 1px;
+  padding-top: 2px;
   background-color: rgb(198, 204, 203);
-  border-radius: 3px;
-  height: 10px;
+  border-radius: 10px;
+  height: 40px;
   flex: 2;
-  box-shadow: 1px 1px rgb(198, 204, 203) inset;
+  box-shadow: 3px 3px rgb(198, 204, 203) inset;
 }
 
 #timer-ssr {
   flex: 1;
-  margin-left: 10px;
+  margin-left: 30px;
   display: flex;
   justify-content: space-between;
   flex-start: end;
@@ -84,7 +84,7 @@ button:focus {
 /* Timer Length Controls */
 
 .length-container {
-  margin-top: 5px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
 }
@@ -94,25 +94,25 @@ button:focus {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 50px;
-  height:30px;
+  width: 140px;
+  height:60px;
 }
 
 .break-container, 
 .session-container {
   text-align: center;
 /*   display: inline-block; */
-  border: 1px solid rgb(104, 189, 158);
+  border: 2px solid rgb(104, 189, 158);
   padding: 10px;
-  border-radius: 5px;
-  width: 20%;
+  border-radius: 10px;
+  width: 48%;
 }
 
 .timer-length {
-  font-size: 0.8em;
+  font-size: 2em;
 }
 
 .break-container,
 .inc-arrow {
-  margin-right: 3px;
+  margin-right: 12px;
 }
