--- a/pomodoro2/src/style.scss
+++ b/pomodoro2/src/style.scss
@@ -18,7 +18,7 @@ body {
 	align-items: center;
 	min-height: 90vh;
 	font-family: 'Poppins', sans-serif;
-	background-color: #1e2140;
+	background-color: #2c453c;
 	color: white;
 
 	.main-heading {
@@ -36,21 +36,21 @@ body {
 	.modes {
 		font-size: 1.8rem;
 		padding: 1.6rem 1rem;
-		background: #151932;
+		background: #2f5251;
 		border-radius: 10rem;
 
 		a {
 			margin-right: 2em;
 			text-decoration: none;
 			font-weight: 500;
-			color: #484c67;
+			color: #48675d;
 			transition: all 300ms ease-out;
 
 			&.active {
 				padding: 0.5em 1em;
 				border-radius: 50px;
 				background-color: #fa6f71;
-				color: #1c2244;
+				color: #2f5251;
 			}
 
 			&:last-child { margin-right: 0; }
@@ -76,8 +76,8 @@ body {
 		margin: 2.5rem 0;
 		text-align: center;
 		border-radius: 50%;
-		background: #151932;
-		box-shadow: 50px 50px 82px #0e1021, -50px -50px 82px #1c2244;
+		background: #2c453c;
+		box-shadow: 50px 50px 82px #2f5251, -50px -50px 82px #1c2244;
 
 		&::before {
 			content: '';
