--- a/pomodoro2/src/css/style.css
+++ b/pomodoro2/src/css/style.css
@@ -73,7 +73,7 @@ body .modes a:last-child{
 }
 
 body .get-started{
-      background:royalblue;
+      background:white;
       padding:1.2rem 2rem;
       border-radius:0.4rem;
       font-size:1.8rem;
@@ -108,7 +108,7 @@ body .pomodoro{
 body .pomodoro::before{
       content:'';
       position:absolute;
-      border:10px solid royalblue;
+      border:10px solid white;
       border-radius:50%;
       width:35rem;height:35rem
 }
