--- a/pomodoro2/src/css/style.css
+++ b/pomodoro2/src/css/style.css
@@ -73,7 +73,7 @@ body .modes a:last-child{
 }
 
 body .get-started{
-      background:white;
+      background:black;
       padding:1.2rem 2rem;
       border-radius:0.4rem;
       font-size:1.8rem;
