--- a/pomodoro2/src/style.scss
+++ b/pomodoro2/src/style.scss
@@ -58,7 +58,7 @@ body {
   }
   
   .get-started {
-    background: white;
+    background: black;
     padding: 1.2rem 2rem;
     border-radius: 0.4rem;
     font-size: 1.8rem;
